amf-cli/shared/src/test/resources/graphql/tck/apis/invalid/is-not-input-type-interface-arguments.api.federation.report
ModelId: file://amf-cli/shared/src/test/resources/graphql/tck/apis/invalid/is-not-input-type-interface-arguments.api.graphql
Profile: GraphQL
Conforms: false
Number of results: 3

Level: Violation

- Constraint: http://a.ml/vocabularies/amf/parser#invalid-input-type
  Message: Type 'Object1' from argument 'input_' must be an input type
  Severity: Violation
  Target: file://amf-cli/shared/src/test/resources/graphql/tck/apis/invalid/is-not-input-type-interface-arguments.api.graphql#/declares/shape/Test
  Property: http://www.w3.org/ns/shacl#property
  Range: [(11,19)-(11,34)]
  Location: 

- Constraint: http://a.ml/vocabularies/amf/parser#invalid-input-type
  Message: Type 'Interface' from argument 'input_' must be an input type
  Severity: Violation
  Target: file://amf-cli/shared/src/test/resources/graphql/tck/apis/invalid/is-not-input-type-interface-arguments.api.graphql#/declares/shape/Test
  Property: http://www.w3.org/ns/shacl#property
  Range: [(12,22)-(12,39)]
  Location: 

- Constraint: http://a.ml/vocabularies/amf/parser#invalid-input-type
  Message: Type 'Union' from argument 'input_' must be an input type
  Severity: Violation
  Target: file://amf-cli/shared/src/test/resources/graphql/tck/apis/invalid/is-not-input-type-interface-arguments.api.graphql#/declares/shape/Test
  Property: http://www.w3.org/ns/shacl#property
  Range: [(13,18)-(13,31)]
  Location: 
